--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <title> PWMB | Trustly</title>
+
+    <!-- trustly integration -->
+    <script src="//sandbox.paywithmybank.com/start/scripts/pwmb.js?accessId=D61EC9BAF0BB369B9438" type="text/javascript"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
